<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Car Maintenance</string>
    <string name="welcome">Welcome!</string>
    <string name="car_tow_image">Image of car being towed</string>
    <string name="add_vehicle_text">Add your first vehicle.</string>
    <string name="add_vehicle_button">Add vehicle</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="manufacturers">Manufacturers</string>
    <string name="model">Model</string>
    <string name="license_plate">License plate</string>
    <string name="model_year">Model year</string>
    <string name="fuel_type">Fuel type</string>
    <string name="fuel_capacity">Fuel capacity (L)</string>
    <string name="chassis_number">Chassis number *optional</string>
    <string name="mileage">Mileage</string>
    <string name="register">Register</string>
    <string name="register_vehicle">Register Vehicle</string>
    <string name="car">Car</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="bus">Bus</string>
    <string name="truck">Truck</string>
    <string name="abarth">Abarth</string>
    <string name="abt">ABT</string>
    <string name="ac">AC</string>
    <string name="acura">Acura</string>
    <string name="aiways">Aiways</string>
    <string name="aixam">Aixam</string>
    <string name="alfa_romeo">Alfa Romeo</string>
    <string name="alpina">Alpina</string>
    <string name="alpine">Alpine</string>
    <string name="apollo">Apollo</string>
    <string name="arash">Arash</string>
    <string name="arcfox">Arcfox</string>
    <string name="ariel">ariel</string>
    <string name="arrival">Arrival</string>
    <string name="arrinera">Arrinera</string>
    <string name="artega">Artega</string>
    <string name="ascari">Ascari</string>
    <string name="askam">Askam</string>
    <string name="aspark">Aspark</string>
    <string name="aston_martin">Aston Martin</string>
    <string name="atalanta">Atalanta Motors</string>
    <string name="audi">Audi</string>
    <string name="audi_sport">Audi Sport</string>
    <string name="autobacs">Autobacs</string>
    <string name="axon">Axon</string>
    <string name="bac">Briggs Automotive Company</string>
    <string name="baic_motor">BAIC Motor</string>
    <string name="baojun">Baojun</string>
    <string name="beiben">BeiBen</string>
    <string name="bentley">Bentley</string>
    <string name="bertone">Bertone</string>
    <string name="bestune">Bestune</string>
    <string name="bharatbenz">BharatBenz</string>
    <string name="bitter">Bitter</string>
    <string name="bmw">BMW</string>
    <string name="bmw_m">BMW M</string>
    <string name="borgward">Borgward</string>
    <string name="bowler">Bowler</string>
    <string name="brabus">Brabus</string>
    <string name="brammo">Brammo</string>
    <string name="brilliance">Brilliance</string>
    <string name="bristol">Bristol</string>
    <string name="brooke">Brooke</string>
    <string name="bufori">Bufori</string>
    <string name="bugatti">Bugatti</string>
    <string name="buick">Buick</string>
    <string name="byd">BYD</string>
    <string name="byton">Byton</string>
    <string name="cadillac">Cadillac</string>
    <string name="camc">CAMC</string>
    <string name="canoo">Canoo</string>
    <string name="caparo">Caparo</string>
    <string name="carlsson">Carlsson</string>
    <string name="caterham">Caterham</string>
    <string name="changan">Changan</string>
    <string name="changfeng">Changfeng</string>
    <string name="chery">Chery</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="chrysler">Chrysler</string>
    <string name="citroen">Citroën</string>
    <string name="cizeta">Cizeta</string>
    <string name="corvette">Corvette</string>
    <string name="dacia">Dacia</string>
    <string name="daewoo">Daewoo</string>
    <string name="daf">DAF</string>
    <string name="daihatsu">Daihatsu</string>
    <string name="daimler">Daimler</string>
    <string name="dartz">Dartz</string>
    <string name="datsun">Datsun</string>
    <string name="david_brown">David Brown</string>
    <string name="dayun">Dayun</string>
    <string name="de_tomaso">De Tomaso</string>
    <string name="devel_sixteen">Devel Sixteen</string>
    <string name="dina">DINA</string>
    <string name="dodge">Dodge</string>
    <string name="dodge_viper">Dodge Viper</string>
    <string name="dongfeng">Dongfeng</string>
    <string name="donkervoort">Donkervoort</string>
    <string name="drako">Drako</string>
    <string name="ds">DS</string>
    <string name="edag">EDAG</string>
    <string name="eicher">Eicher</string>
    <string name="elemental">Elemental</string>
    <string name="elfin">Elfin</string>
    <string name="elva">Elva</string>
    <string name="exeed">Exeed</string>
    <string name="nineff">9ff</string>
    <string name="faraday_future">Faraday Future</string>
    <string name="faw">FAW</string>
    <string name="faw_jiefang">FAW Jiefang</string>
    <string name="ferrari">Ferrari</string>
    <string name="fiat">Fiat</string>
    <string name="fioravanti">Fioravanti</string>
    <string name="fisker">Fisker</string>
    <string name="force">Force Motors</string>
    <string name="ford">Ford</string>
    <string name="ford_mustang">Ford Mustang</string>
    <string name="foton">Foton</string>
    <string name="freightliner">Freightliner</string>
    <string name="fso">FSO</string>
    <string name="gac">GAC Group</string>
    <string name="gardner_douglas">Gardner Douglas</string>
    <string name="gaz">GAZ</string>
    <string name="geely">Geely</string>
    <string name="general_motors">General Motors</string>
    <string name="genesis">Genesis</string>
    <string name="geometry">Geometry</string>
    <string name="gillet">Gillet</string>
    <string name="ginetta">Ginetta</string>
    <string name="gmc">GMC</string>
    <string name="golden_dragon">Golden Dragon</string>
    <string name="gonow">Gonow</string>
    <string name="great_wall">Great Wall</string>
    <string name="grinnall">Grinnall</string>
    <string name="hafei">Hafei</string>
    <string name="haima">Haima</string>
    <string name="haval">Haval</string>
    <string name="hawtai">Hawtai</string>
    <string name="hennessey">Hennessey</string>
    <string name="higer" tools:ignore="Typos">Higer</string>
    <string name="hindustan">Hindustan Motors</string>
    <string name="hino">Hino</string>
    <string name="hiphi">Hiphi</string>
    <string name="holden">Holden</string>
    <string name="honda">Honda</string>
    <string name="hongqi">Hongqi</string>
    <string name="hongyan">Hongyan</string>
    <string name="hsv">HSV</string>
    <string name="hummer">Hummer</string>
    <string name="hyundai">Hyundai</string>
    <string name="ic_bus">IC Bus</string>
    <string name="infiniti">Infiniti</string>
    <string name="intermeccanica">Intermeccanica</string>
    <string name="international">International</string>
    <string name="iran_khodro">Iran Khodro</string>
    <string name="irizar">Irizar</string>
    <string name="isdera">Isdera</string>
    <string name="isuzu">Isuzu</string>
    <string name="iveco">Iveco</string>
    <string name="jac">JAC</string>
    <string name="jaguar">Jaguar</string>
    <string name="jawa">Jawa</string>
    <string name="jba_motors">JBA Motors</string>
    <string name="jeep">Jeep</string>
    <string name="jetta">Jetta</string>
    <string name="jiangling">Jiangling</string>
    <string name="kamaz">Kamaz</string>
    <string name="karlmann_king">Karlmann King</string>
    <string name="karma">Karma</string>
    <string name="keating">Keating</string>
    <string name="kenworth">Kenworth</string>
    <string name="kia">Kia</string>
    <string name="king_long">King Long</string>
    <string name="koenigsegg">Koenigsegg</string>
    <string name="ktm">KTM</string>
    <string name="lada">Lada</string>
    <string name="lagonda">Lagonda</string>
    <string name="lamborghini">Lamborghini</string>
    <string name="lancia">Lancia</string>
    <string name="land_rover">Land Rover</string>
    <string name="landwind">Landwind</string>
    <string name="laraki">Laraki</string>
    <string name="leapmotor">Leapmotor</string>
    <string name="lexus">Lexus</string>
    <string name="lifan">Lifan</string>
    <string name="ligier">Ligier</string>
    <string name="lincoln">Lincoln</string>
    <string name="lister">Lister</string>
    <string name="lixiang">Lixiang</string>
    <string name="lobini">Lobini</string>
    <string name="london_ev_company">London EV Company</string>
    <string name="lordstown">Lordstown</string>
    <string name="lotus">Lotus</string>
    <string name="lucid">Lucid</string>
    <string name="luxgen">Luxgen</string>
    <string name="lynkco">Lynk &amp; Co</string>
    <string name="mack">Mack</string>
    <string name="mahindra">Mahindra</string>
    <string name="man">MAN</string>
    <string name="mansory">Mansory</string>
    <string name="marcos">Marcos</string>
    <string name="marlin">Marlin</string>
    <string name="maserati">Maserati</string>
    <string name="mastretta">Mastretta</string>
    <string name="maxus">Maxus</string>
    <string name="maybach">Maybach</string>
    <string name="maz">MAZ</string>
    <string name="mazda">Mazda</string>
    <string name="mazzanti">Mazzanti</string>
    <string name="mclaren">McLaren</string>
    <string name="melkus">Melkus</string>
    <string name="mercedes_benz">Mercedes Benz</string>
    <string name="mercury">Mercury</string>
    <string name="mev">MEV</string>
    <string name="mg">MG</string>
    <string name="microcar">Microcar</string>
    <string name="mini">Mini</string>
    <string name="mitsubishi">Mitsubishi</string>
    <string name="mitsuoka">Mitsuoka</string>
    <string name="mk_sportscars">MK Sportscars</string>
    <string name="morgan">Morgan</string>
    <string name="mosler">Mosler</string>
    <string name="navistar">Navistar</string>
    <string name="nevs">NEVS</string>
    <string name="nikola">Nikola</string>
    <string name="nio">Nio</string>
    <string name="nissan">Nissan</string>
    <string name="nissan_nismo">Nissan Nismo</string>
    <string name="noble">Noble</string>
    <string name="oltcit">Oltcit</string>
    <string name="opel">Opel</string>
    <string name="paccar">Paccar</string>
    <string name="pagani">Pagani</string>
    <string name="panoz">Panoz</string>
    <string name="perodua">Perodua</string>
    <string name="peterbilt">Peterbilt</string>
    <string name="peugeot">Peugeot</string>
    <string name="pgo">PGO</string>
    <string name="pininfarina">Pininfarina</string>
    <string name="polestar">Polestar</string>
    <string name="pontiac">Pontiac</string>
    <string name="porsche">Porsche</string>
    <string name="praga">Praga</string>
    <string name="premier">Premier</string>
    <string name="prodrive">Prodrive</string>
    <string name="proton">Proton</string>
    <string name="qoros">Qoros</string>
    <string name="radical">Radical</string>
    <string name="ram">Ram</string>
    <string name="ranz">Ranz</string>
    <string name="renault">Renault</string>
    <string name="rezvani">Rezvani</string>
    <string name="rimac">Rimac</string>
    <string name="rinspeed">Rinspeed</string>
    <string name="rivian">Rivian</string>
    <string name="roewe">Roewe</string>
    <string name="rolls_royce">Rolls Royce</string>
    <string name="ronart">Ronart</string>
    <string name="rossion">Rossion</string>
    <string name="ruf">RUF</string>
    <string name="saab">Saab</string>
    <string name="saic">SAIC Motor</string>
    <string name="saipa">Saipa</string>
    <string name="saleen">Saleen</string>
    <string name="saturn">Saturn</string>
    <string name="scania">Scania</string>
    <string name="scion">Scion</string>
    <string name="seat">SEAT</string>
</resources>